# sdk

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPERS.md  README.md  orbit.code-workspace  sdk.code-workspace
.cargo/: config.toml
.github/: WORKFLOW_REORGANIZATION.md  copilot-instructions.md
.github/actions/: README.md
.github/actions/handle-non-blocking-job/: action.yml
.github/workflows/: README.md  beta-compatibility-check.yml  ci.yml  orbit-mcp.yml  release.yml  workspace-ci.yml
orbit-docs/: Cargo.toml
scripts/: check-beta-compatibility.ps1  dev-runner.ps1  dev-runner.py  install-pre-commit-hook.ps1  orbit-copilot.sh  orbit-dev-mcp.sh  pre-commit-hook  setup-copilot-cli.sh  setup-dev-env.ps1
