[workspace]
resolver = "2"
members = [
    "orbiton",
    "orbit",
    "orlint", 
    "examples",
]

[workspace.dependencies]
# Internal crates
orbit = { path = "./orbit" }
orbiton = { path = "./orbiton" }
orlint = { path = "./orlint" }
examples = { path = "./examples" }

# Common external dependencies
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
