[workspace]
resolver = "2"
members = [
    "orbiton",
    "orbit", 
    "orlint",
    "examples",
    "orbit-mcp",
]

# Workspace-wide optimization settings
[workspace.dependencies]
# Internal crates
orbit = { path = "./orbit", default-features = false }
orbiton = { path = "./orbiton" }
orlint = { path = "./orlint" }
examples = { path = "./examples" }
orbit-mcp = { path = "./orbit-mcp" }

# Common external dependencies with version unification
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"

# Development profile optimized for fast iteration
[profile.dev]
opt-level = 0
debug = false
incremental = true
codegen-units = 16

# Optimize dependencies in dev mode for better runtime performance
[profile.dev.package."*"]
opt-level = 2
debug = false

# Release profile optimized for performance
[profile.release]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 1
panic = "abort"
